mcfootball-generator/src/test/resources/football/invalid/ShortStadiumName.fb
/* Invalid — triggers 0xFC014: stadium name "AB" is < 3 characters. */
footballsite ShortStadiumTest {

  navigation { Testland; }

  country Testland {
    league TestLeague season "2025-2026" {
      match {
        date    "2025-09-01"
        time    "15:00"
        home    "Team Alpha"   ("CityA")
        away    "Team Beta"    ("CityB")
        score   1 - 0
        stadium "AB"
      }
    }
  }

}
